# matchmaking-cu

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: run.yml
docs/: docs.md
matchmaking/server/: Dockerfile  server.py
matchmaking/server/tests/: .gitignore
matchmaking/server/tests/test_0/: 00000000-0000-0000-0000-000000000000.json  7d971f2b-5308-4984-8e22-e99386c5f5df.json  test.json
matchmaking/server/tests/test_1/: 00000000-0000-0000-0000-000000000000.json  241e8b3b-3e30-489e-bb1a-d57819969e47.json  61cf586a-3e90-49de-9905-0827c3465f93.json  test.json
matchmaking/server/tests/test_10/: 00000000-0000-0000-0000-000000000000.json  054037ca-9109-4550-9f9a-0dabc10e5ec8.json  376c4997-ac30-4d96-b0e5-09502b32a4a9.json  test.json
matchmaking/server/tests/test_11/: 00000000-0000-0000-0000-000000000000.json  77169043-9eac-4bb1-8e47-871b848d85f5.json  df265448-7f3b-47f6-855e-aff44ab4fa2e.json  test.json
matchmaking/server/tests/test_12/: 00000000-0000-0000-0000-000000000000.json  7e3328e9-ff72-473f-9c70-c05ad61b624e.json  e71b7e47-6cc8-465e-b47c-62d54787b94f.json  test.json
matchmaking/server/tests/test_13/: 00000000-0000-0000-0000-000000000000.json  640d81b1-172a-4ebc-890a-9f5713e4e8f5.json  test.json  (+1 more)
matchmaking/solution/: .gitignore  Cargo.toml  Dockerfile  LICENSE
matchmaking/solution/src/: constants.rs  main.rs
matchmaking/solution/src/models/: epoch.rs  mod.rs  submit.rs  user.rs
matchmaking/solution/src/services/: determine_teams.rs  epoch.rs  get_url.rs  get_waiting_users.rs  mod.rs  post_teams.rs  test_conn.rs
(+56 files in other folders)
