[package]
name = "solution"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = {version = "1.46.1", features = ["rt-multi-thread", "macros"]}
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tower-http = {version = "0.6.1", features = ["trace"]}
cached = "0.46.1"
reqwest = { version = "0.12.22", features = ["default", "json"] }
futures = "0.3.31"
