[package]
name = "solution"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
reqwest = { version = "0.12.22", features = ["default", "json", "blocking"] }
uuid = { version = "1.17.0", features = ["serde", "std", "v4"]}
